Actions
Bug #10333
closedcw: error: comparison between pointer and zero character constant
Start date:
2019-02-01
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
We need to de-reference the pointer in is_source_file(). Found with gcc 7
Updated by Electric Monk over 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 406d4d29fb52df8ec016b6e9a83e030013fa1514
commit 406d4d29fb52df8ec016b6e9a83e030013fa1514 Author: John Levon <john.levon@joyent.com> Date: 2019-02-01T19:01:39.000Z 10333 cw: error: comparison between pointer and zero character constant Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions