10333 cw: error: comparison between pointer and zero character constant Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>